BUGFIX: Paragraph spacing in artwork description

--- a/desktop/apps/artwork/components/additional_info/index.styl
+++ b/desktop/apps/artwork/components/additional_info/index.styl
@@ -1,8 +1,11 @@
 @require '../../../../components/side_tabs'
 
 .artwork-additional-info
-  //
+
   &__content
+    p
+      margin-bottom 1em
+
     //
     &__articles
       //
